tests/fixtures/invalid/bool_in_float.py
# Cannot use 'in' with Bool and Float
x: bool = True in 1.0
